[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
l0 = { path = "../l0" }
zk = { path = "../zk" }
anyhow = "1.0.98"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
rand = "0.8"
log = "0.4.27"
env_logger = "0.10.0"
hex_str = { version = "0.3.0", features = ["serde"] }
ark-std = "0.5.0"
